--- a/src/components/Orders/Orders.css
+++ b/src/components/Orders/Orders.css
@@ -1,8 +1,17 @@
+section {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+}
+
 .order {
   border: 1px solid black;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 10px;
   background-color: #FFF;
+  overflow: auto;
 }
 
 .ingredient-list {
