--- a/src/components/OrderForm/OrderForm.css
+++ b/src/components/OrderForm/OrderForm.css
@@ -19,3 +19,23 @@ input {
   display: flex;
   padding: 20px;
 }
+
+.buttons-ctr > button {
+  background: none;
+  border: 1px solid black;
+  padding: 5%;
+  transition: .2s ease all;
+  cursor: pointer;
+}
+
+.buttons-ctr > button:hover {
+  background: rgba(0,0,0,0.85);
+  color: white;
+}
+
+@media screen and (max-width: 750px) {
+  .input-btns-ctr {
+    flex-direction: column;
+    align-items: center;
+  }
+}
