--- a/src/components/OrderForm/OrderForm.css
+++ b/src/components/OrderForm/OrderForm.css
@@ -38,4 +38,14 @@ input {
     flex-direction: column;
     align-items: center;
   }
+
+  .buttons-ctr > button {
+    width: 80px;
+    height: 60px;
+  }
+  .buttons-ctr {
+    width: auto;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+  }
 }
